base/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  labels:
    app: database
spec:
  ports:
    - port: 5432
      name: router
  selector:
    app: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-ss
spec:
  serviceName: database-svc
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi
